--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.web</groupId>
-    <artifactId>webFramework</artifactId>
+    <groupId>testing.web</groupId>
+    <artifactId>testFramework</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>webFramework</name>
+    <name>testFramework</name>
     <packaging>war</packaging>
 
     <properties>
@@ -44,14 +44,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
