--- a/testframework/webapp/WEB-INF/web.xml
+++ b/testframework/webapp/WEB-INF/web.xml
@@ -37,6 +37,8 @@
         <!-- izay pattern tiana, de soratana amle url -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
+    
+    <Package>model/</Package>
+    <Url>http://localhost:8082/testframework/</Url>
 
 </web-app>
